--- a/css/main.css
+++ b/css/main.css
@@ -1,23 +1,82 @@
 /*start at */
+main { width: 95%; margin: 0 auto; }
+
+main > div { display: inline-block; }
+
+/* mobile first -> write the rules that will apply handheld first */
 
 .box1 {
-	width: 300px;
+	width: 100%;
 	height: 300px;
-	background-color: lightblue;
+	background-color: yellow;
+	display: block;
 }
 
 .box2 {
-	width: 300px;
+	width: 100%;
 	height: 300px;
-	background-color: pink;
+	background-color: red;
+	display: block;
+}
+
+.description {
+	display: none;
+}
+
+.image-container {
+	width: 100%;
+	display: block;
+}
+
+img, video, object embed {
+	max-width: 100%;
 }
 
 /* this is a basic media query */
-/*cahnge the layout when we're viewing the app on a phone */
+/* change the layout when we're viewing the app on a phone */
 
-@media only screen and (min-device-width: 320px) and (max-device-width:600px) {
+/*@media only screen and (min-device-width: 320px) and (max-device-width:600px) {
 	.box1 {
 		background-color: goldenrod;
 		border: black;
+	}
+}*/
+
+/* change the layout wgen we're viewing the app on a phone @ landscape - make it responsive */
+
+@media screen and (min-width: 375px) {
+	.box1 {
+		background-color: yellow;
+		display: inline-block;
+		width: 48%;
+	}
+
+	.box2 {
+		background-color: orange;
+		display: inline-block;
+		width: 48%;
+	}
+}
+
+/* media query for tablet @ portrait */
+
+@media screen and (min-width: 768px) {
+	.box1 {
+		background-color: green;
+		display: inline-block;
+		width: 65%;
+	}
+
+	.box2 {
+		display: none;
+	}
+
+	.description {
+		display: block;
+	}
+
+	.image-container {
+		width: 30%;
+		display: inline-block;
 	}
 }
